@@ -35,7 +35,7 @@ FilePeruser User Guide
 
 2. Requirements:
        - A C99 compiler with ftw.h (something at least partly POSIX-compliant)
-         and with functions strncmp, strncasecmp, and nftw.
+         and with functions strstr, strcasestr, and nftw.
        Note:
            I do not know any more of the system requirements for this program.
            If any more are discovered, add them here.
